arm_sve2/ms1/output/output-10146.err
run_naive_ms1.cpp: In function ‘int main(int, char**)’:
run_naive_ms1.cpp:629:36: error: ‘omp_time’ was not declared in this scope
  629 |     printf("Openmp Time = %.5g\n", omp_time);
      |                                    ^~~~~~~~
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms1/./conv_layer: No such file or directory
rm: cannot remove 'conv_layer': No such file or directory
